# fintechco-insights

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO.md  Dockerfile  Makefile  README.md  SEEDS.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: compliance-reviewer.md
.claude/hooks/: audit.sh  guard-secrets.sh  lint.sh
.claude/rules/: design-system.md
.claude/skills/compliance-review/: SKILL.md
.claude/skills/new-dashboard-view/: SKILL.md
.claude/skills/test-gen/: SKILL.md
.claude/skills/ui-check/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: auth.py  db.py  main.py  transactions.py
app/ledger/: rounding.py
infra/terraform/: main.tf  statements-exporter-sa-key.json  variables.tf
jira/: TICKET.md
migrations/: 001_init.sql
scripts/: fetch_fred.py  gen_fixtures.py  jira_reset.py  preflight.sh  rehearse.sh  reset.sh  seed_db.py
services/insights/: CLAUDE.md  implementation_guidelines.md
services/insights/app/: __init__.py  analysis.py  api.py  fred.py  indicators.py  main.py  news.py
services/insights/app/data/: CPIAUCSL.csv  CPILFESL.csv  FEDFUNDS.csv  U6RATE.csv  UNRATE.csv
services/insights/tests/: conftest.py  test_analysis.py  test_api.py  test_fred.py  test_phillips_view.py
services/insights/web/: DESIGN.md  index.html
services/statements/: CLAUDE.md
services/statements/app/: main.py  transactions.py
services/statements/tests/: conftest.py  test_transactions.py
tests/: test_export.py  test_infra.py
(+9 files in other folders)
